# poc

./: Cargo.toml  README.md
.github/workflows/: release.yml
.poc/cache/: build.hash
src/: ai.rs  cli.rs  config.rs  main.rs  orchestrator.rs  types.rs  walker.rs
src/plugins/: c.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs  zig.rs
