[package]
name = "poc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "6"
walkdir = "2"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
colored = "3"
clap_complete = "4"
sha2 = "0.10"
notify = "7"
