[package]
name = "poc-build"
version = "0.1.1"
edition = "2021"
description = "Polyglot build tool that detects, orchestrates, and AI-fixes projects across six languages"
license = "MIT"
repository = "https://github.com/plyght/poc"
keywords = ["build", "polyglot", "orchestrator", "lint", "ai"]
categories = ["development-tools", "development-tools::build-utils"]

[[bin]]
name = "poc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "6"
walkdir = "2"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
colored = "3"
clap_complete = "4"
sha2 = "0.10"
notify = "7"
